# SecureIoTOS

./: LICENSE  README.md  RESEARCH-PAPERS.md
auth_identity/: Cargo.toml
auth_identity/src/: key_storage.rs  lib.rs  token.rs
bootloader/: Cargo.toml
bootloader/src/: firmware.rs  main.rs  nvic.rs
crypto/: Cargo.toml
crypto/src/: aes.rs  ecc.rs  lib.rs  rng.rs
drivers/: Cargo.toml
drivers/src/: gpio_driver.rs  init.rs  lib.rs  spi_driver.rs
examples/: hello_world.rs  sensor_node.rs
hal/: Cargo.toml
hal/src/: bus.rs  gpio.rs  lib.rs  timer.rs
iot-apps/: Cargo.toml
iot-apps/src/: hello.rs  lib.rs  sensor.rs  telemetry.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: context.rs  init.rs  lib.rs  scheduler.rs  syscall.rs
memory/: Cargo.toml
memory/src/: heap.rs  lib.rs  mpu.rs  stack.rs
net/: Cargo.toml
net/src/: lib.rs
peripheral_security/: Cargo.tml
peripheral_security/src/: lib.rs  secure_bus.rs  secure_sensor.rs
scheduler_ipc/: Cargo.tml
scheduler_ipc/src/: ipc.rs  lib.rs  scheduler.rs  tasks.rs
secure-communication/: Cargo.toml
secure-communication/src/: coap.rs  lib.rs  mqtt.rs  tls.rs
secure_storage/: Cargo.toml
secure_storage/src/: flash.rs  key_mgmt.rs  lib.rs  wear_level.rs
tests/: bootloader_test.rs
threat_testing/src/: fuzzing.rs  lib.rs  runtime_monitor.rs  static_analysis.rs
tools/: flash.sh
